Fixed some layout issues and smooth scrolling behaviour

--- a/media.css
+++ b/media.css
@@ -61,7 +61,7 @@
         display: block;
         width: 92vw;
         text-align: center;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         font-size: 30px;
     }
 
@@ -132,7 +132,7 @@
 
 @media screen and (max-width: 550px) {
     #main {
-        height: 1050px;
+        height: 1150px;
     }
 }
 
@@ -149,7 +149,7 @@
     }
     
     #main {
-        height: 1000px;
+        height: 1100px;
     }
 
     #main p {
